# audit_react

./: .env.example  .gitignore  AGENTS.md  AGENTS_SQL.md  ANALISE_ARQUITETURA.md  Agent.md  Agent_SQL.md  Agents.md  ENTREGA_RELATORIOS.md  FRONTEND.md  IMPLEMENTACAO_CONCLUIDA.md  IMPLEMENTACAO_REFERENCIAS_RESUMO.md  PLANO_LIMPEZA.md  PLANO_SQL.md  README.md  UX_ANALYSIS.md  app.py  app_react.py  code_review_request.md  commit_msg.txt  docker-compose.observability.yml  fix.patch  fix_path.py  fix_relatorio_fiscal.py_patch  fix_test.js  fix_test_2.js  fix_test_4.js  fix_test_5.js  fix_test_clean.js  fix_test_import.js  ideas.md  implementation_plan_otimizacao_fase3.md  map_estoque.json  package.json  plan.md  plan.txt  plano_estruturado_concluir_implementacao_audit_react.md  plano_novo.md  pnpm-lock.yaml  python_migrate_contracts.py  (+15 more)
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
.playwright-cli/: page-2026-04-08T20-41-41-511Z.yml  page-2026-04-08T20-42-01-688Z.yml  page-2026-04-08T20-42-18-533Z.yml  page-2026-04-08T20-42-46-567Z.yml  page-2026-04-08T20-43-07-287Z.yml  page-2026-04-08T20-43-27-883Z.yml  page-2026-04-08T20-47-12-319Z.yml
.qwen/: settings.json
.tmp-decompiled/: relatorio_fiscal.cpython-313.py
backend/: main.py  main_prod.py  requirements.txt  start.ps1
client/: index.html
consultas_fonte/: NFCe.sql
docs/: PLAN.md  PLANO_MELHORIAS_AUDIT_REACT.md  Plano_otimizacao.md  README.md  agents.md  (+45 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
(+726 files in other folders)
