[package]
name = "audit_react_tauri"
version = "0.1.0"
description = "Fiscal Parquet Analyzer Desktop/Mobile shell powered by Tauri v2"
authors = ["Enio Telles"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
